[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.11", default-features = false, features = ["csr"] }
leptos_router = { version = "0.6.11", default-features = false, features = ["csr"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
incremental = false
debug = false
