[package]
name = "portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.38"
leptos = { version = "0.8.2", default-features = false, features = ["csr"] }
leptos_router = { version = "0.8.2", default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
incremental = false
debug = false
